# copland_os

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  TODO.md  build.rs  debug.sh  default.env  kernel.toml  linker.ld  script_raspi3b.gdb  virt.ld
.cargo/: config.toml
common/: Cargo.toml
common/src/: lib.rs  uefi.rs
linker/: raspi3b.ld  virt.ld  x86_64.ld
loader/: Cargo.toml
loader/src/: main.rs
src/: address.rs  allocator.rs  arch.rs  csr.rs  device.rs  error.rs  fs.rs  interrupt.rs  kernlock.rs  lazy.rs  lib.rs  lock.rs  logger.rs  main.rs  panic.rs  plic.rs  print.rs  riscv.rs  sandbox.rs  task.rs  test.rs  trap.rs  uart.rs
src/allocator/: dlmalloc.rs  watermark.rs
src/arch/: aarch64.rs  riscv64.rs  x86_64.rs
src/arch/aarch64/: address.rs  arm.rs  boot.S  exception.rs  start.rs  switch.S  task.rs  vector.S  vm.rs
src/arch/riscv64/: address.rs  boot.S  csr.rs  kernelvec.S  paging.rs  plic.rs  riscv.rs  start.rs  switch.S  task.rs  trampoline.S  trap.rs  vm.rs
src/arch/x86_64/: boot.S  task.rs  uefi.rs
src/device/: common.rs  raspi3b.rs
src/device/common/: uart.rs  virtio.rs
src/device/common/virtio/: block.rs  header.rs  queue.rs
src/device/raspi3b/: base.rs  framebuffer.rs  mailbox.rs  sd.rs  uart.rs  wait.rs
src/device/virt/: uart.rs
src/fs/: buffer.rs  fat32.rs
src/sandbox/: dwc.rs  fb_char.rs  sd.rs
src/sync/: lazy.rs  mutex.rs
tools/: debug_raspi3b.sh  script.gdb  script_virt.gdb
tools/ovmf/: OVMF_VARS.fd
