[package]
edition = "2021"
name = "copland_os"
version = "0.0.1"

[dependencies]
bitflags = "1.3.2"
embedded-graphics = "0.7.1"
fatfs = {git = "https://github.com/rafalh/rust-fatfs.git", default-features = false, features = ["alloc", "lfn"]}
hashbrown = "0.12.0"
log = "0.4.17"
spin = "0.9.2"
volatile = "0.3.0"

[build-dependencies]
toml = "0.5.9"
