[package]
edition = "2021"
name = "neverland"
version = "0.0.1"

[dependencies]
bitflags = "1.3.2"
const-default = {version = "1.0", features = ["derive"]}
dlmalloc = {git = "https://github.com/hobo0xcc/dlmalloc-rs.git"}
embedded-graphics = "0.7.1"
fatfs = {git = "https://github.com/rafalh/rust-fatfs.git", default-features = false, features = ["alloc", "lfn"]}
goblin = {version = "0.5", default-features = false, features = ["elf32", "elf64", "endian_fd"]}
hashbrown = "0.12.0"
log = "0.4.17"
qemu-exit = "3.0.1"
spin = "0.9.2"
volatile = "0.3.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
uefi = {version = "0.16.0", features = ["alloc"]}

[build-dependencies]
toml = "0.5.9"

[profile.release-with-debug]
debug = true
inherits = "release"
